# grail-test

./: .bazelrc  .gitignore  LICENSE  MODULE.bazel  README.md  WORKSPACE
src/main/cpp/: BUILD.bazel  main.cpp  print_hello.cpp  print_hello.hpp
src/main/protobuf/: BUILD.bazel  test.proto
