bazel_dep(name = "toolchains_llvm", version = "0.10.3")

# To directly use a commit from GitHub, replace commit with the commit you want.
# Otherwise, omit this block.
#git_override(
#  module_name = "toolchains_llvm",
#  commit = "42e0b400fe316797657ccc5d7d2f9bb6f13071d8",
#  remote = "https://github.com/grailbio/bazel-toolchain",
#)

# Configure and register the toolchain.
llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
   llvm_version = "16.0.0",
)

use_repo(llvm, "llvm_toolchain")
# use_repo(llvm, "llvm_toolchain_llvm") # if you depend on specific tools in scripts

register_toolchains("@llvm_toolchain//:all")